Use hyphenated Agent-Flavored

--- a/spec/overrides/partials/footer.html
+++ b/spec/overrides/partials/footer.html
@@ -21,7 +21,7 @@
     <div class="md-footer-meta__inner md-grid">
       <div class="md-footer-copyright">
         <div class="md-footer-copyright__content" style="font-size: 0.7rem; line-height: 1.6;">
-          <span style="font-weight: 600; font-size: 0.75rem;">Agent Flavored Markdown - AFM</span><br>
+          <span style="font-weight: 600; font-size: 0.75rem;">Agent-Flavored Markdown - AFM</span><br>
           <span style="font-size: 0.65rem;">Made with <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">Material for MkDocs</a></span>
         </div>
       </div>
