--- a/spec/overrides/partials/header.html
+++ b/spec/overrides/partials/header.html
@@ -35,7 +35,7 @@
           <span class="md-ellipsis">
             {% if page and page.meta and page.meta.title %}
               {{ page.meta.title }}
-            {% else %}
+            {% elif page and page.title %}
               {{ page.title }}
             {% endif %}
           </span>
