Address review suggestions

--- a/spec/overrides/partials/footer.html
+++ b/spec/overrides/partials/footer.html
@@ -27,7 +27,7 @@
       </div>
       <div class="md-footer-copyright">
         <div class="md-footer-copyright__content" style="text-align: right; font-size: 0.7rem; line-height: 1.6;">
-          <span>Copyright © WSO2 LLC (2025)</span><br>
+          <span>Copyright © WSO2 LLC (2025 - 2026)</span><br>
           <span style="font-size: 0.65rem; opacity: 0.8;">Licensed under <a href="https://creativecommons.org/licenses/by-nd/4.0/" target="_blank" rel="noopener">CC BY-ND 4.0</a></span>
         </div>
       </div>
